cleanup and two more feature names
git-svn-id: http://svn.code.sf.net/p/htmlunit/code/trunk/htmlunit@6385 5f5364db-9458-4db8-a492-e30667be6df6